162 adding eventListeners to the buttons

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+<audio id="crash" src="sounds/crash.mp3"></audio>
 
   <h1 id="title">Drum 🥁 Kit</h1>
   <div class="set">
@@ -25,6 +26,7 @@
   <footer>
     Made with ❤️ in London.
   </footer>
+  <script src="index.js"></script>
 </body>
 
 </html>
